refactor webExRate