@@ -1,6 +1,7 @@
 package com.example.hellospring.payment.exrate;
 
 import com.example.hellospring.payment.payment.ExRateProvider;
+import com.fasterxml.jackson.core.JsonProcessingException;
 import com.fasterxml.jackson.databind.ObjectMapper;
 import org.springframework.stereotype.Component;
 
@@ -9,6 +10,8 @@ import java.io.IOException;
 import java.io.InputStreamReader;
 import java.math.BigDecimal;
 import java.net.HttpURLConnection;
+import java.net.URI;
+import java.net.URISyntaxException;
 import java.net.URL;
 import java.util.stream.Collectors;
 
@@ -23,17 +26,31 @@ import java.util.stream.Collectors;
 @Component
 public class WebApiExRateProvider implements ExRateProvider {
     @Override
-    public BigDecimal getExRate(String currency) throws IOException {
-        URL url = new URL("https://open.er-api.com/v6/latest/" + currency);
-        HttpURLConnection connection = (HttpURLConnection) url.openConnection();
-        BufferedReader br = new BufferedReader(new InputStreamReader(connection.getInputStream()));
-        String response = br.lines().collect(Collectors.joining());
-        br.close();
-
+    public BigDecimal getExRate(String currency) {
+        var url = "https://open.er-api.com/v6/latest/" + currency;
+        URI uri;
+        try {
+            uri = new URI(url);
+        } catch (URISyntaxException e) {
+            throw new RuntimeException(e);
+        }
+        HttpURLConnection connection;
+        String response;
+        try {
+            connection = (HttpURLConnection) uri.toURL().openConnection();
+            try (var br = new BufferedReader(new InputStreamReader(connection.getInputStream()))) {
+                response = br.lines().collect(Collectors.joining());
+            }
+        } catch (IOException e) {
+            throw new RuntimeException(e);
+        }
         ObjectMapper mapper = new ObjectMapper();
-        ExRateDate exRateDate = mapper.readValue(response, ExRateDate.class);
-        BigDecimal exRate = exRateDate.rates().get("KRW");
-        System.out.println("Ex Rate: " + exRate);
-        return exRate;
+        ExRateDate exRateDate;
+        try {
+            exRateDate = mapper.readValue(response, ExRateDate.class);
+            return exRateDate.rates().get("KRW");
+        } catch (JsonProcessingException e) {
+            throw new RuntimeException(e);
+        }
     }
 }
